# haier-auto-booker

./: .gitignore  README.md  auth.py  client.py  config.example.yaml  keys.py  keys_local.example.py  main.py  menu.py  poll.py  pyproject.toml  requirements.txt  reserve.py  sign.py  test_sign.py  test_units.py
.github/workflows/: ci.yml
