[project]
name = "washbot"
version = "0.1.0"
description = "Auto-booker for the Haier GlobalWasher campus-laundry app"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "cryptography>=42.0,<46",
    "requests>=2.31,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5"]

[tool.ruff]
target-version = "py310"
extend-exclude = ["keys_local*.py", "capture_addon.py"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort. Keep it light for a hobby project.
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines are fine (decompiled-source comments, key blobs)
